# TidyPyString

./: .buildinfo  .gitignore  Makefile  README.md  advanced_usage.html  api-ref.html  cheats.html  genindex.html  index.html  objects.inv  overview.html  pyproject.toml  search.html  searchindex.js  string_basics.html  string_case.html  string_detection.html  string_extraction.html  string_modification.html  string_utilities.html
.github/: index.md
.github/workflows/: _poetry.yml  pages.yml  publish.yml
_modules/: index.html
_modules/tidystring/: cheatsheet.html  methods.html  regex_utils.html
_sources/: advanced_usage.rst.txt  api-ref.rst.txt  index.rst.txt  string_basics.rst.txt  string_case.rst.txt  string_detection.rst.txt  string_extraction.rst.txt  string_modification.rst.txt  string_utilities.rst.txt
_sources/modules/: tidystring.rst.txt
_sources/usage/: advanced_usage.rst.txt  string_basics.md.txt  string_case.md.txt  string_extraction.md.txt  string_utilities.rst.txt
_static/styles/: book.css
devops/: README.md  publish.py  publish.sh  run_format.sh  run_linter.sh  test_workflow.sh
docs/: Makefile  README.md  build.sh  conf.py
docs/_static/: custom.js
docs/_templates/: autoclass.rst
docs/source/: advanced_usage.rst  api-ref.rst  cheats.md  index.rst  overview.md  string_basics.rst  string_case.rst  string_detection.rst  string_extraction.rst  string_modification.rst  string_utilities.rst
docs/source/usage/: advanced_usage.md  string_basics.rst  string_case.rst  string_detection.md  string_detection.rst  string_extraction.rst  string_modification.md  string_modification.rst  string_utilities.md
modules/: tidystring.html
scripts/: build_docs.py
sphinx/: Makefile  index.html
sphinx/_templates/: module.rst
sphinx/source/: index.rst  quickdoc.md  quickview.md
sphinx/source/modules/: tidystring.rst
tests/: test_cheatsheet.py  test_tidystring.py
tidystring/: __init__.py  _tidystring.py  cheatsheet.py  handlers.py  methods.py  regex_utils.py
usage/: advanced_usage.html  string_basics.html  string_case.html  string_detection.html  string_extraction.html  string_modification.html  string_utilities.html
writeup/: README.md
